# azure-cli-profile--unofficial

./: .gitignore  README.md  pyproject.toml  setup.cfg
azure/cli/command_modules/profile/: entrypoint.py
