[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azure-cli-profile"
dynamic = ["version"]
requires-python = ">= 3.9"
dependencies = [
  "azure-cli-core>=2.69.0",
]
description = "Installs just the Azure Command-Line login tools"
license = { text = "MIT" }
authors = [
  { name = "Akhil Nair", email = "yup.im.aki@gmail.com" }
]

[project.scripts]
azq = "azure.quick_cli:invoke_default_cli"

[tool.setuptools.packages.find]
exclude = [
  "*.tests",
  "*.tests.*",
  "tests.*",
  "tests",
  "azure",
  "azure.cli"
]

[tool.setuptools]
zip-safe = false
